Interface some backend classes and remove getting hashtags ordered by name (#594)
* Add repository interfaces

* Restructure repos

* Remove ordering hashtags by name
