# backend/src/swagger.json
@@ -495,15 +495,6 @@
 							"default": "",
 							"type": "string"
 						}
-					},
-					{
-						"in": "query",
-						"name": "orderBy",
-						"required": false,
-						"schema": {
-							"default": "name",
-							"type": "string"
-						}
 					}
 				]
 			}
